--- a/app/src/main/res/layout/activity_string_result.xml
+++ b/app/src/main/res/layout/activity_string_result.xml
@@ -8,7 +8,8 @@
 
     <TextView
         android:id="@+id/resultText"
-        android:layout_gravity="center"
+        android:layout_gravity=""
+        android:gravity="center_vertical"
         android:textIsSelectable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
