--- a/app/src/main/res/layout/content_result.xml
+++ b/app/src/main/res/layout/content_result.xml
@@ -1,12 +1,9 @@
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/list"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:numColumns="2"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <ListView
-        android:id="@+id/resultList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</LinearLayout>
+    android:drawSelectorOnTop="true"/>
