--- a/app/src/main/res/layout/activity_string_result.xml
+++ b/app/src/main/res/layout/activity_string_result.xml
@@ -4,13 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StringResult">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/resultText"
-        android:layout_gravity=""
+        android:paddingTop="50dp"
+        android:layout_gravity="center"
         android:gravity="center_vertical"
         android:textIsSelectable="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_gravity="center"
+        android:id="@+id/copyButton"
+        android:text="Copy"
+        android:onClick="copyContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
